--- a/src/App.module.css
+++ b/src/App.module.css
@@ -35,15 +35,17 @@
 
 .button {
   background: transparent;
-  border: 1px solid #171212;
+  border: 1px solid #ffffff;
   padding: 5px;
   cursor: pointer;
+  color:#ffffff;
+
 
   transition: all 0.1s ease-in;
 }
 
 .button:hover {
-  background: #171212;
+  background: #cc710f;
   color: #ffffff;
 }
 
@@ -62,15 +64,16 @@
 }
 
 .label {
-  border-top: 1px solid #171212;
-  border-left: 1px solid #171212;
+  border-top: 1px solid #ffffff;
+  border-left: 1px solid #ffffff;;
   padding-left: 5px;
   font-size: 24px;
 }
 
 .input {
   border: none;
-  border-bottom: 1px solid #171212;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff;
   background-color: transparent;
 
   font-size: 24px;
@@ -79,5 +82,5 @@
 .activeSort {
   color: #ffffff;
   font-weight: bold;
-  background-color: #000000;
+  background-color: #cc710f;
 }
